Add queries to self in notes

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
     <h3>Household finances can be  a headache!</h3>
     <h4>Let's help you get on top of things!</h4>
     <p>Enter your expenses below and we'll calculate your budget for you!</p>
-    
+
     <div class="container">
       <form>
         <!--work out how to enclose both label and input with a capsule shaped div?-->
+        <!--Add Income fields-->
+        <!--Use separate IDs or generic classes for the JS to operate on?????-->
         <div class="form-group row">
           <label for="expense1" class="col-sm-2 col-form-label">Expense 1</label>
           <div class="col-sm-10">
